Fixed blogposts to show the newest first and linebreaks in them

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -12,3 +12,7 @@ body {
 .bg-black {
     background-color: black;
 }
+
+.pre-wrap{
+    white-space: pre-wrap;
+}
